# Sequence_based

./: Readme.md
Find_approx_sequence_match/: CMakeLists.txt  approxseqmatch.cpp  readme.txt
TFO_finder/: Domake_imac.sh  commandline_parse.hpp  constants_nn.hpp  find_tfo.hpp  readme.md  tfo_finder.cpp
TFO_finder_python/: constants_nn.py  lncr_process_rnafold.py  readme.md
TFO_search/: CMakeLists.txt  Domake_air.sh  nn_tm.hpp  readme.md
